# Smart_City

./: .env  CLI_USAGE.md  README.md  STREAMLIT_GUIDE.md  admin_worker_app.py  app.py  pyproject.toml  requirements.txt  run_cli.py  run_system.py  setup_cloud_db.sql  status_log.txt  test_integration.py  test_sessions.py  verify_local_runner.py
smart_city_agent/: agent.py  local_runner.py  message_processor.py  session_manager.py
smart_city_agent/database/infrastructure_db/: data.sql  schema.sql
smart_city_agent/database/power_db/: data.sql  schema.sql
smart_city_agent/database2/emergency_db/: data.sql  schema.sql
smart_city_agent/database2/emergency_db2/: data.sql  schema.sql
smart_city_agent/database2/infrastructure_db2/: data.sql
smart_city_agent/database2/power_db2/: data.sql
smart_city_agent/database2/sanitation_db/: data.sql  schema.sql
smart_city_agent/database2/sanitation_db2/: data.sql  schema.sql
smart_city_agent/database2/utility_db/: data.sql  schema.sql
smart_city_agent/database2/utility_db2/: data.sql  schema.sql
smart_city_agent/mcp_server/: README.md  db.py  emergency_server.py  infrastructure_server.py  power_server.py  sanitation_server.py  server.py  utility_server.py
smart_city_agent/sub_agent/Emergency_Agent/: agent.py  tool.py
smart_city_agent/sub_agent/Infrastructure_Agent/: agent.py  tool.py
smart_city_agent/sub_agent/Power_Agent/: agent.py  tool.py
smart_city_agent/sub_agent/Sanitation_Agent/: agent.py  tool.py
smart_city_agent/sub_agent/Utility_Agent/: agent.py  tool.py
